# apc524-option-pricing

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  proposal.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst
examples/: delta_hedging_animation.py  delta_hedging_example.py
notebooks/: barrier_options_demo.ipynb  delta_hedging_experiments copy.ipynb  delta_hedging_experiments.ipynb
src/option_pricing/: __init__.py  api.py  barrier_adjustments.py  barrier_analytic.py  barrier_product.py  bs_price.py  convergence.py  pde_solver.py  pricing.py
src/option_pricing/hedging/: __init__.py  bs_mc_simple_delta_hedger.py
src/option_pricing/stats/: __init__.py  histogram_calculator.py
tests/: test_barrier_adjustments.py  test_barrier_analytic.py  test_barrier_product.py  test_bs_delta_hedge_api.py  test_digital_black_scholes.py  test_pde_solver.py  test_pricing.py  test_put_call_parity.py  test_stats_histogram.py
